Fix blocker, bug and security issues detected by SonarQube: * mainly refactor the clone to copy method * check potential user-controlled data handling in code * remove the thrown of IOException in servlet methods by catching them and to set the HTTP response status code at 500 (Internal Server Error) * some classes requiring to be serializable implement this interface * fix some minor issues